--- a/topFive/css/styles.css
+++ b/topFive/css/styles.css
@@ -58,8 +58,8 @@ h2 {
   letter-spacing: .1em;
   margin-left: 15px;
   margin-right: 15px;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: 20px;
+  margin-bottom: 20px;
   color: #88E032;
 
   text-align: center;
@@ -83,9 +83,10 @@ code {
 
 li {
 
-   color: white;
-   font-family: "Josefin Sans", system-ui;
-   padding: 10px;
+   color: #FFC341;
+   font-family: "EB Garamond", system-ui;
+   font-size: 18px;
+   padding: 20px;
    text-decoration: none
 }
 
@@ -98,17 +99,18 @@ a {
 
 }
 
+dd {
+   font-family: "EB Garamond", system-ui;
+   color: #FFC341;
+   padding: 20px;
+   font-size: 18px;
+}
+
 h3 {
    font-size: 18px;
    font-family: "Josefin Sans", system-ui;
    color: #FFC341;
-}
-
-li {
-   font-size: 10px;
-   text-decoration: none;
-   font-family: "Josefin Sans", system-ui;
-   color: #88E032;
+   padding-top: 20px;
 }
 
 ul a {
